--- a/jQuery_Tutorial/index.html
+++ b/jQuery_Tutorial/index.html
@@ -8,6 +8,7 @@
     <script src="jquery-3.7.1.min.js"></script>
   </head>
   <body>
+    <h1 class="box1">Le huy hung</h1>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="main.js"></script>
   </body>
