--- a/jQuery_Tutorial/jQuery_Events/index.html
+++ b/jQuery_Tutorial/jQuery_Events/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jquery Envents</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./main.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Demo một số events methods</h1>
-    <h2 class="box1">Tu hoc jQuery</h2>
-    <button class="btn">Click me</button>
-    <button class="dbl-click">Double Click</button>
-</body>
+    <button class="btn">1.Click me</button>
+    <button class="dbl-click">2.Double Click</button>
+    <h2 class="mouseenter">3.Mouseenter</h2>
+    <h2 class="mouseleave">4.Mouseleave</h2>
+    <h2 class="hovers">5. Hover</h2>
+    <p class="method-on">6. Phương thức On()</p>
+  </body>
 </html>
