--- a/jQueryHTML/jQuery_Get/get_tetxt_and_html.html
+++ b/jQueryHTML/jQuery_Get/get_tetxt_and_html.html
@@ -11,6 +11,10 @@
     <p id="content">Content <strong>HTML</strong> and <strong>Text</strong></p>
     <button type="button" id="btn-text">Show Text</button>
     <button type="button" id="btn-html">Show HTML</button>
+    <form action="">
+        <input type="text" id="ipt" placeholder="Nhập gì thì tùy">
+        <button id="btn-val">Submit</button>
+    </form>
 
     <script src="./get_tetxt_and_html.js"></script>
 </body>
