--- a/jQueryHTML/jQuery_Set/inedex.html
+++ b/jQueryHTML/jQuery_Set/inedex.html
@@ -8,7 +8,19 @@
   </head>
   <body>
     <h1 class="box1">Tự học JQuery</h1>
-   
+    <h2 id="text_default">Text Default</h2>
+    <p id="html_default">HTML <strong>Default</strong></p>
+    <label for=""
+      >Input Default:
+      <input type="text" name="" id="inpt_default" value="Input Default"
+    /></label>
+
+    <a href="https://www.facebook.com/" id="link_default">Di chuột vao đây để xem href</a>
+    <div style="margin: 20px 0"></div>
+    <button id="set_text">Set Text</button>
+    <button id="set_html">Set HTML</button>
+    <button id="set_input">Set HTML</button>
+    <button id="set_attr">Set Attributes</button>
     <script src="./main.js"></script>
   </body>
 </html>
