--- a/jQueryHTML/jQuery_Add/inedex.html
+++ b/jQueryHTML/jQuery_Add/inedex.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JQuery Get</title>
+    <title>JQuery Set</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
   <body>
     <h1 class="box1">Tự học JQuery</h1>
-    <input type="text" name="" id="input" />
-    <!-- <button class="run">RUN!</button> -->
-    <button class="get-attr">Get Attributes</button>
+    
     <script src="./main.js"></script>
   </body>
 </html>
