--- a/jQueryHTML/jQuery_Get/get_tetxt_and_html_val.html
+++ b/jQueryHTML/jQuery_Get/get_tetxt_and_html_val.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=\, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=\, initial-scale=1.0" />
     <title>Get Content</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-</head>
-<body>
-
+  </head>
+  <body>
     <p id="content">Content <strong>HTML</strong> and <strong>Text</strong></p>
     <button type="button" id="btn-text">Show Text</button>
     <button type="button" id="btn-html">Show HTML</button>
     <form action="">
-        <input type="text" id="ipt" placeholder="Nhập gì thì tùy">
-        <button id="btn-val">Submit</button>
+      <input type="text" id="ipt" placeholder="Nhập gì thì tùy" />
+      <button id="btn-val">Submit</button>
     </form>
 
-    <script src="./get_tetxt_and_html.js"></script>
-</body>
+    <script src="./get_tetxt_and_html_val.html"></script>
+  </body>
 </html>
