Add New Context HTML: append, prepend

--- a/jQueryHTML/jQuery_Add/inedex.html
+++ b/jQueryHTML/jQuery_Add/inedex.html
@@ -8,7 +8,15 @@
   </head>
   <body>
     <h1 class="box1">Tự học JQuery</h1>
-    
+    <!-- append() -->
+    <p id="append_p">Append</p>
+    <button id="btn_append">Button Append</button>
+    <hr style="border: 1px dashed black" />
+
+    <p id="pre_p">Prepend</p>
+    <button id="btn_prepend">Button Prepend</button>
+    <hr style="border: 1px dashed black" />
+
     <script src="./main.js"></script>
   </body>
 </html>
