jQuery: Remove Elements/ Contents (remove, empty)

--- a/jQueryHTML/jQuery_Add/inedex.html
+++ b/jQueryHTML/jQuery_Add/inedex.html
@@ -13,6 +13,7 @@
     <button id="btn_append">Button Append</button>
     <hr style="border: 1px dashed black" />
 
+    <!-- Prepend() -->
     <p id="pre_p">Prepend</p>
     <button id="btn_prepend">Button Prepend</button>
     <hr style="border: 1px dashed black" />
