feat: update remove width claass

--- a/jQueryHTML/jQuery_Remove/inedex.html
+++ b/jQueryHTML/jQuery_Remove/inedex.html
@@ -20,7 +20,7 @@
         text-align: center;
       "
     >
-      Hàm Remove
+      <b>1. Hàm Remove</b>
       <p>Content 1</p>
       <p>Content 2</p>
     </div>
@@ -38,11 +38,27 @@
         text-align: center;
       "
     >
-      Hàm Remove
+      <b>2. Hàm Empty</b>
       <p>Context 1</p>
       <p>Context 2</p>
     </div>
     <button id="btn_empty" style="margin: 10px 0">Hàm Empty</button>
+    <hr style="border: 1px dashed black" />
+
+    <!-- xóa toàn bộ thê p có class="test" -->
+    <p><b>Hàm xóa 1 hoặc nhiều element có chung class</b></p>
+    <p class="test">Contet 1</p>
+    <p class="test">Contet 2</p>
+    <button class="btn_removeClass">
+      Remove all element p width class "test"
+    </button>
+    <hr style="border: 1px dashed black" />
+
+    <!-- xóa 2 class cùng 1 lúc -->
+    <p><b>Xóa 2 class cùng 1 lúc </b></p>
+<p class="test">Content 1</p>
+<p class="demo">Content 2</p>
+<button class="btn_remove2Class">Remove 2 class</button>
     <hr style="border: 1px dashed black" />
 
     <script src="./main.js"></script>
